--- a/templates/imt-header.mustache
+++ b/templates/imt-header.mustache
@@ -25,7 +25,7 @@
 
     {{#fppageheader}}
         <div class="header__bottom">
-            <div class="imtpn-container">
+            <div class="imt-container">
                 <div class="header__title">
                     {{{fppageheader}}}
                 </div>
