Fixed dashboard & added necessary files to do so

--- a/scss/components/components.scss
+++ b/scss/components/components.scss
@@ -57,3 +57,15 @@
         }
     }
 }
+
+/* Bienvenue block in dashboard page */
+.bienvenue {
+    a {
+        display: block;
+        border: solid $primary 1px;
+        padding: 1rem;
+        img {
+            background: #fff;
+        }
+    }
+}
