--- a/templates/theme_clboost/frontpage.mustache
+++ b/templates/theme_clboost/frontpage.mustache
@@ -59,7 +59,7 @@
 
     {{> theme_boost/navbar }}
     {{> theme_boost/nav-drawer }}
-    {{> theme_imtpn/imt-header }}
+    {{> theme_imt/imt-header }}
     <div id="page" class="d-print-block">
         {{{ output.context_header_settings_menu }}}
 
