--- a/templates/theme_boost/login.mustache
+++ b/templates/theme_boost/login.mustache
@@ -40,7 +40,7 @@
 
     {{> theme_boost/navbar }}
     {{> theme_boost/nav-drawer }}
-    {{> theme_imtpn/imt-header }}
+    {{> theme_imt/imt-header }}
     <div id="page" class="container-fluid">
         <div id="page-content" class="row">
             <div id="region-main-box" class="col-12">
