Cleaning of imtpn names

--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -49,7 +49,7 @@ footer.footer {
         border-color: transparent transparent $secondary transparent;
     }
 
-    .imtpn-container {
+    .imt-container {
         height: 100%;
         display: flex;
         flex-direction: column;
