--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -19,7 +19,7 @@ body.notloggedin {
             opacity: 0.8;
         }
 
-        .imtpn-container {
+        .imt-container {
             flex-grow: 1;
             display: flex;
             align-items: center;
@@ -148,7 +148,7 @@ body.notloggedin {
                 height: 262px;
             }
 
-            .imtpn-container {
+            .imt-container {
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
