--- a/templates/theme_clboost/columns2.mustache
+++ b/templates/theme_clboost/columns2.mustache
@@ -58,7 +58,7 @@
     {{{ output.standard_top_of_body_html }}}
 
     {{> theme_boost/navbar }}
-    {{> theme_imtpn/imt-header }}
+    {{> theme_imt/imt-header }}
     <div id="page" class="container-fluid d-print-block">
         {{{ output.full_header }}}
 
