--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -91,21 +91,15 @@ footer.footer {
 
         ul {
             display: flex;
+            justify-content: space-between;
             flex-direction: column;
             align-items: center;
             list-style-type: none;
+            padding:0;
         }
 
-        li {
-            margin: 0 10px;
-
-            a, a:visited, a:hover {
-                color: inherit;
-            }
-        }
-
-
-        logininfo {
+        .logininfo {
+            display: flex;
             justify-content: center;
         }
     }
