--- a/scss/pages/login.scss
+++ b/scss/pages/login.scss
@@ -2,3 +2,28 @@
     background-color: $white;
     background-image: none;
 }
+
+/*
+.login-form {
+
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+
+    .form-group {
+        width: 50vw;
+    }
+}
+
+#guestlogin {
+    margin-bottom:0.5rem;
+}
+*/
+
+.loginform {
+    padding: 0 20%;
+
+    .btn {
+        margin-bottom: 1rem;
+    }
+}
